types of mailboxes used by auth-mysql.

Support for TCP Wrappers was added.

tpop3d will now remove a stale PID file on startup, rather than exiting.

Support for the MySQL PASSWORD() function as a password-hashing method was
added.

A bug in the supplied TPOP3D::AuthDriver perl module was fixed, thanks to
Steve Benson.

1.3.4

Minor changes, and addition of metadata caching for BSD mailspools; in
addition, the mailbox object was modified for efficiency reasons.

Fixed a bug which could cause child processes to fail with SIGSEGV under heavy
load.

Added an auth-perl script for authentication against an Oracle database,
contributed by Paul Makepeace.

1.3.3

Fixes for a couple of portability bugs which crept in to 1.3.2.

1.3.2

Minor changes, and an update for auth-mysql to allow passwords in formats
other than the default straight MD5 checksums. Different formats are denoted
by a prefixed token enclosed in { }. Presently supported are:

    {crypt}...          crypt(3) hash
    {crypt_md5}...      crypt_md5 hash
    {plaintext}...      plaintext password
    {md5} or no prefix  old-style simple MD5 password

This facility replaces the old apop_password field in the database; instead,
APOP users should arrange for their passwords to be recorded in the plaintext
format as above.  The new vmail-sql will work in the same way, when it is
released.

In addition, there are a couple of fixes: a small memory leak was removed, and
code was added to work around some bugs in old GNU libc versions.

1.3.1

Minor changes, and the addition of auth-perl for implementing authenticators
as fragments of perl code.

1.3.0

Incorporated autoconf support from Mark Longair, maildir support from Paul
Makepeace, a new authenticator (auth-other) which talks to external programs
and a perl library to support it, a more general scheme for selecting
mailspools and minor portability fixes.

1.2.4

Fixes for a few minor bugs, and more intelligent signal handling. tpop3d now