@@ -1,2 +1,0 @@
-This is a `startup item' for tpop3d for Mac OS X. It was contributed by
-Gerben Wierda.
