@@ -1,0 +1,4 @@
+listen-address: 0.0.0.0
+mailbox: bsd:/var/mail/$(user)
+auth-passwd-enable: yes
+auth-passwd-mail-group: mail
